Second Working Version

--- a/catherinerauch.html
+++ b/catherinerauch.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Projects</title>
+<title>Catherine Rauch</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -304,19 +304,40 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Projects</h1>
+<h1 class="title toc-ignore">Catherine Rauch</h1>
 
 </div>
 
 
-<p>In summer of 2020 I took a GIS course based in R. Here is the collection of links to code written:</p>
-<div id="building-a-project-website" class="section level2">
-<h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
+<div id="education" class="section level1">
+<h1>Education</h1>
 <ul>
-<li>In this assignment we built a user site with GitHub</li>
-<li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
-<li>Use of themes and icons on a webpage was explored</li>
+<li><p>University of California at Santa Barbara (UCSB) <strong>2019 - 2021</strong></p>
+<p>Statistics and Data Science (BS)</p></li>
+<li><p>Santa Rosa Junior College (SRJC) <strong>2017 - 2019</strong></p>
+<p>Economics(AA-T), Business Administration(AS-T) and Mathematics(AS-T)</p></li>
 </ul>
+</div>
+<div id="relevant-courseworkexperience" class="section level1">
+<h1>Relevant Coursework/Experience</h1>
+<div id="ucsb" class="section level3">
+<h3>UCSB</h3>
+<ul>
+<li><p>PSTAT 126 REGRESSION ANALYSIS</p>
+<p>Use of R in Linear and multiple regression, including analysis of residuals, transformations, and variable/model selection</p></li>
+<li><p>PSTAT 195 DATA SCIENCE APPLICATIONS AND ANALYSIS</p>
+<p>Use of Python in Jupyter Notebook (pandas, numpy, altair) for data retrieval, analysis, visualization, and report generation.</p></li>
+<li><p>PSTAT 174 TIME SERIES</p>
+<p>Use of R in examining, estimating, diagnostic checking, and forecasting of stationary/ non-stationary models including seasonal time series and ARMA models.</p></li>
+</ul>
+</div>
+<div id="srjc" class="section level3">
+<h3>SRJC</h3>
+<ul>
+<li><p>CS 61.11A/B MS EXCEL</p>
+<p>Creating, editing, formatting Excel worksheets, workbooks, charts , web pages, using functions and formulas, macros and PivotTables/PivotCharts.</p></li>
+</ul>
+</div>
 </div>
 
 
