Working Site Edit pt2

--- a/catherinerauch.html
+++ b/catherinerauch.html
@@ -294,6 +294,13 @@ $(document).ready(function () {
      CV
   </a>
 </li>
+<li>
+  <a href="https://github.com/catherinerauch">
+    <span class="fa fa-github"></span>
+     
+    Github
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
