--- a/index.html
+++ b/index.html
@@ -293,6 +293,13 @@ $(document).ready(function () {
      CV
   </a>
 </li>
+<li>
+  <a href="https://github.com/catherinerauch">
+    <span class="fa fa-github"></span>
+     
+    Github
+  </a>
+</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         
