--- a/index.html
+++ b/index.html
@@ -318,15 +318,16 @@ $(document).ready(function () {
 
 
 <center>
-<div class="section level1">
-<h1>Hi, I’m Catherine <i class="fas  fa-exclamation " style="color:blue;"></i></h1>
+<div class="section level2">
+<h2>Hi, I’m Catherine <i class="fas  fa-exclamation " style="color:black;"></i></h2>
 </center>
 <p>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in Spatial Studies.</p>
 <p>I enjoy open water swimming, dogs and riding my bike to class. I dearly miss being on Campus.</p>
 <p>I also enjoy tailoring my projects to my interests, which include photography, traveling, marine life, and sports.</p>
-<div class="figure">
-<img src="img/OsakaCaslteLookout.jpg" alt="" />
-<p class="caption">One of many photos snapped while traveling abroad</p>
+<div class="figure" style="text-align: center">
+<img src="img/OsakaCastle.jpg" alt="   " width="49%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="49%" height="20%" />
+<p class="caption">
+</p>
 </div>
 </div>
 
