updated about me page

--- a/index.html
+++ b/index.html
@@ -326,15 +326,16 @@ $(document).ready(function () {
 
 
 </center>
-<div id="im-in-my-last-year-pursuing-a-bachelors-degree-in-statistics-and-data-science-at-the-university-of-california-at-santa-barbara-ucsb.-i-am-currently-exploring-a-minor-in-spatial-studies." class="section level4">
-<h4>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in Spatial Studies.</h4>
+I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.
 </center>
+<p>In my free time, I moonlight as an amateur photographer and travel photographing landscapes and marine life.</p>
 <div class="figure" style="text-align: center">
 <img src="img/OsakaCastle.jpg" alt="   " width="49%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="49%" height="20%" />
 <p class="caption">
 </p>
 </div>
-</div>
+<p>Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.</p>
+<p>I enjoy open water swimming and tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
 
 
 
