--- a/geog176A.html
+++ b/geog176A.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Projects</title>
+<title>geog176A.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -269,7 +269,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Catherine's Website</a>
+      <a class="navbar-brand" href="index.html">Catherine Rauch</a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -320,18 +320,23 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Projects</h1>
 
 </div>
 
 
-<p>In summer of 2020 I took a GIS course based in R. Here is the collection of links to code written:</p>
+<p>In summer of 2020 I took a GIS course based in R. Here is the collection of links:</p>
 <div id="building-a-project-website" class="section level2">
 <h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
 <ul>
 <li>In this assignment we built a user site with GitHub</li>
 <li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
 <li>Use of themes and icons on a webpage was explored</li>
+</ul>
+<p>##<a href="https://catherinerauch.github.io/geog-176A-labs/lab-02.html">Analysis of COVID-19 Data</a></p>
+<ul>
+<li>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</li>
+<li>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</li>
+<li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</li>
 </ul>
 </div>
 
