--- a/geog176A.html
+++ b/geog176A.html
@@ -332,7 +332,9 @@ $(document).ready(function () {
 <li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
 <li>Use of themes and icons on a webpage was explored</li>
 </ul>
-<p>##<a href="https://catherinerauch.github.io/geog-176A-labs/lab-02.html">Analysis of COVID-19 Data</a></p>
+</div>
+<div id="analysis-of-covid-19-data" class="section level2">
+<h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-02.html">Analysis of COVID-19 Data</a></h2>
 <ul>
 <li>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</li>
 <li>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</li>
