--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Catherine Rauch</a>
+      <a class="navbar-brand" href="index.html"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -325,16 +325,15 @@ $(document).ready(function () {
 </div>
 
 
-</center>
-I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.
-</center>
-<p>In my free time, I moonlight as an amateur photographer and travel photographing landscapes and marine life.</p>
-<div class="figure" style="text-align: center">
+<p><br></p>
+<p>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>. <br></p>
+<div class="figure" style="text-align: left">
 <img src="img/OsakaCastle.jpg" alt="   " width="49%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="49%" height="20%" />
 <p class="caption">
 </p>
 </div>
-<p>Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.</p>
+<p>In my free time I travel <a href="https://vsco.co/catttrauc/gallery">photographing</a> landscapes and marine life. <br></p>
+<p>Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. <br></p>
 <p>I enjoy open water swimming and tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
 
 
