--- a/catherinerauch.html
+++ b/catherinerauch.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Catherine Rauch</a>
+      <a class="navbar-brand" href="index.html"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -325,6 +325,7 @@ $(document).ready(function () {
 </div>
 
 
+<p><br></p>
 <div id="education" class="section level1">
 <h1>Education</h1>
 <ul>
@@ -333,6 +334,7 @@ $(document).ready(function () {
 <li><p>Santa Rosa Junior College (SRJC) <strong>2017 - 2019</strong></p>
 <p>Economics(AA-T), Business Administration(AS-T) and Mathematics(AS-T)</p></li>
 </ul>
+<p><br></p>
 </div>
 <div id="relevant-courseworkexperience" class="section level1">
 <h1>Relevant Coursework/Experience</h1>
