--- a/geog176A.html
+++ b/geog176A.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Catherine Rauch</a>
+      <a class="navbar-brand" href="index.html"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -325,17 +325,17 @@ $(document).ready(function () {
 </div>
 
 
-<p><space></p>
-<div id="in-summer-2020-i-took-an-r-based-gis-course---geography-176a-intro-to-geographic-information-systems-and-science" class="section level4">
-<h4>In summer 2020, I took an R based GIS course - Geography 176A (Intro to Geographic Information Systems and Science)</h4>
-<p>Here is the collection of links for completed assignments:</p>
+<p><br></p>
+<div id="in-summer-2020-i-took-an-r-based-gis-course-geography-176a---intro-to-geographic-information-systems-and-science." class="section level4">
+<h4>In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</h4>
+<p>Here is the collection of links for completed assignments: <br></p>
 </div>
 <div id="building-a-project-website" class="section level2">
 <h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
 <ul>
 <li>In this assignment we built a user site with GitHub</li>
 <li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
-<li>Use of themes and icons on a webpage was explored</li>
+<li>Use of themes and icons on a webpage was explored <br></li>
 </ul>
 </div>
 <div id="analysis-of-covid-19-data" class="section level2">
