--- a/projects.html
+++ b/projects.html
@@ -269,7 +269,7 @@ $(document).ready(function () {
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="index.html">Catherine Rauch</a>
+      <a class="navbar-brand" href="index.html"></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
@@ -326,7 +326,8 @@ $(document).ready(function () {
 
 
 <p><br> <br></p>
-###Time Series Analysis and Forecast of Southern Resident Killer Whale (SRKW) Sightings
+<div id="time-series-analysis-and-forecast-of-southern-resident-killer-whale-srkw-sightings" class="section level3">
+<h3>Time Series Analysis and Forecast of Southern Resident Killer Whale (SRKW) Sightings</h3>
 <div class="figure" style="text-align: left">
 <img src="img/killerwhales3.jpg" alt="   " width="45%" height="20%" /><img src="img/whaleforecast.png" alt="   " width="45%" height="20%" />
 <p class="caption">
@@ -334,6 +335,7 @@ $(document).ready(function () {
 </div>
 <p>The goal of this report was to compile sighting data of the SRKW’s in the Salish Sea, and to forecast future sightings. Raw data was compiled from <a href="https://hotline.whalemuseum.org/">the Whale Museums’ Hotline</a>. A total of 16,722 southern resident observations were grouped by month from year 2008 to 2015. After appropriate transformation and differencing was applied, multiple SARIMA models were fit and diagnostics preformed to choose the best. This model was then used to forecast the next 6 months of sightings.</p>
 <p><br> <br></p>
+</div>
 <div id="exploratory-analysis-of-shark-tank-data" class="section level3">
 <h3>Exploratory Analysis of Shark Tank Data</h3>
 <div class="figure" style="text-align: left">
@@ -351,7 +353,7 @@ $(document).ready(function () {
 <p class="caption">
 </p>
 </div>
-<p>This project investigates the link between brain/body weight, life span, gestation time, time spent sleeping/dreaming, and predation/danger indices for 62 species of mammals. The raw data was cleaned and relationships were explored in a scatterplot matrix. While attempting to determine which variables were significant in predicating Time Spent Dreaming, high influence and leverage points were found and multiple models were fit before selecting the best with AIC. To predict total time spent dreaming step-wise regression was preformed.</p>
+<p>This project investigates the link between brain/body weight, life span, gestation time, time spent sleeping/dreaming, and predation/danger indices for 62 species of mammals. The raw data was cleaned and relationships were explored in a scatterplot matrix. While attempting to determine which variables were significant in predicting time spent dreaming, high influence and leverage points were found and multiple models were fit before selecting the best with AIC. To predict total time spent dreaming step-wise regression was preformed.</p>
 </div>
 
 
