--- a/index.html
+++ b/index.html
@@ -332,9 +332,8 @@ $(document).ready(function () {
 <p class="caption">
 </p>
 </div>
-<p>In my free time I travel <a href="https://vsco.co/catttrauc/gallery">photographing</a> landscapes and marine life. <br></p>
-<p>Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. <br></p>
-<p>I enjoy open water swimming and tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
+<p>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. <br></p>
+<p>I enjoy tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
 
 
 
