--- a/projects.html
+++ b/projects.html
@@ -326,8 +326,8 @@ $(document).ready(function () {
 
 
 <p><br> <br></p>
-<div id="time-series-analysis-and-forecast-of-southern-resident-killer-whale-srkw-sightings" class="section level3">
-<h3>Time Series Analysis and Forecast of Southern Resident Killer Whale (SRKW) Sightings</h3>
+<div id="time-series-analysis-and-forecast-of-southern-resident-killer-whale-sightings" class="section level3">
+<h3>Time Series Analysis and Forecast of Southern Resident Killer Whale Sightings</h3>
 <div class="figure" style="text-align: left">
 <img src="img/killerwhales3.jpg" alt="   " width="45%" height="20%" /><img src="img/whaleforecast.png" alt="   " width="45%" height="20%" />
 <p class="caption">
