added link to lab 03

--- a/geog176A.html
+++ b/geog176A.html
@@ -346,6 +346,9 @@ $(document).ready(function () {
 <li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</li>
 </ul>
 </div>
+<div id="exploration-of-us-city-data" class="section level2">
+<h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration of US city data</a></h2>
+</div>
 
 
 
