--- a/geog176A.html
+++ b/geog176A.html
@@ -330,12 +330,12 @@ $(document).ready(function () {
 <h4>In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</h4>
 <p>Here is the collection of links for completed assignments: <br></p>
 </div>
-<div id="building-a-project-website" class="section level2">
-<h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
+<div id="exploration-of-us-city-data" class="section level2">
+<h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration of US city data</a></h2>
 <ul>
-<li>In this assignment we built a user site with GitHub</li>
-<li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
-<li>Use of themes and icons on a webpage was explored <br></li>
+<li>In this lab we explored working with sf, sfc, and sfg features &amp; objects</li>
+<li>Coordinate transformations and calculations were made to visual distances between cities and borders</li>
+<li>Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting <br></li>
 </ul>
 </div>
 <div id="analysis-of-covid-19-data" class="section level2">
@@ -343,11 +343,16 @@ $(document).ready(function () {
 <ul>
 <li>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</li>
 <li>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</li>
-<li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</li>
+<li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots <br></li>
 </ul>
 </div>
-<div id="exploration-of-us-city-data" class="section level2">
-<h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration of US city data</a></h2>
+<div id="building-a-project-website" class="section level2">
+<h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
+<ul>
+<li>In this assignment we built a user site with GitHub</li>
+<li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
+<li>Use of themes and icons on a webpage was explored <br></li>
+</ul>
 </div>
 
 
