--- a/geog176A.html
+++ b/geog176A.html
@@ -326,15 +326,15 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<div id="in-summer-2020-i-took-an-r-based-gis-course-geography-176a---intro-to-geographic-information-systems-and-science." class="section level4">
-<h4>In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</h4>
-<p>Here is the collection of links for completed assignments: <br></p>
+<div id="in-summer-2020-i-took-an-r-based-gis-course-geography-176a---intro-to-geographic-information-systems-and-science." class="section level5">
+<h5>In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</h5>
+<p>Here is the collection of links for completed assignments: <br> <br></p>
 </div>
 <div id="exploration-of-us-city-data" class="section level2">
 <h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration of US city data</a></h2>
 <ul>
 <li>In this lab we explored working with sf, sfc, and sfg features &amp; objects</li>
-<li>Coordinate transformations and calculations were made to visual distances between cities and borders</li>
+<li>Coordinate transformations and calculations were made to visualize distances between cities and borders</li>
 <li>Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting <br></li>
 </ul>
 </div>
