add lab 04 link

--- a/geog176A.html
+++ b/geog176A.html
@@ -325,33 +325,43 @@ $(document).ready(function () {
 </div>
 
 
-<p><br></p>
 <div id="in-summer-2020-i-took-an-r-based-gis-course-geography-176a---intro-to-geographic-information-systems-and-science." class="section level5">
 <h5>In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</h5>
-<p>Here is the collection of links for completed assignments: <br> <br></p>
+<p>Here is the collection of links for completed assignments:</p>
+</div>
+<div id="impact-of-the-maup-on-national-dam-inventory-data" class="section level2">
+<h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-04.html">Impact of the MAUP on National Dam Inventory data</a></h2>
+<ul>
+<li>In this lab we examined the impacts of different tessellated surfaces and the modifiable areal unit problem (MAUP)</li>
+<li>Point-in-polygon counts were calculated to aggregate point data and visualize the distribution of dams over the US</li>
+<li>Functions were written to more efficiently report and map information</li>
+</ul>
+<hr />
 </div>
 <div id="exploration-of-us-city-data" class="section level2">
 <h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration of US city data</a></h2>
 <ul>
 <li>In this lab we explored working with sf, sfc, and sfg features &amp; objects</li>
 <li>Coordinate transformations and calculations were made to visualize distances between cities and borders</li>
-<li>Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting <br></li>
+<li>Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting</li>
 </ul>
+<hr />
 </div>
 <div id="analysis-of-covid-19-data" class="section level2">
 <h2><a href="https://catherinerauch.github.io/geog-176A-labs/lab-02.html">Analysis of COVID-19 data</a></h2>
 <ul>
 <li>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</li>
 <li>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</li>
-<li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots <br></li>
+<li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</li>
 </ul>
+<hr />
 </div>
 <div id="building-a-project-website" class="section level2">
 <h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
 <ul>
 <li>In this assignment we built a user site with GitHub</li>
 <li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
-<li>Use of themes and icons on a webpage was explored <br></li>
+<li>Use of themes and icons on a webpage was explored</li>
 </ul>
 </div>
 
