--- a/catherinerauch.html
+++ b/catherinerauch.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Catherine Rauch</title>
+<title>catherinerauch.utf8</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -326,42 +326,14 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Catherine Rauch</h1>
 
 </div>
 
 
-<p><br></p>
-<div id="education" class="section level1">
-<h1>Education</h1>
-<ul>
-<li><p>University of California at Santa Barbara (UCSB) <strong>2019 - 2021</strong></p>
-<p>Statistics and Data Science (BS)</p></li>
-<li><p>Santa Rosa Junior College (SRJC) <strong>2017 - 2019</strong></p>
-<p>Economics(AA-T), Business Administration(AS-T) and Mathematics(AS-T)</p></li>
-</ul>
-<p><br></p>
-</div>
-<div id="relevant-courseworkexperience" class="section level1">
-<h1>Relevant Coursework/Experience</h1>
-<div id="ucsb" class="section level3">
-<h3>UCSB</h3>
-<ul>
-<li><p>PSTAT 195 DATA SCIENCE APPLICATIONS AND ANALYSIS</p>
-<p>Use of Python in Jupyter Notebook (pandas, numpy, altair) for data retrieval, analysis, visualization, and report generation.</p></li>
-<li><p>PSTAT 174 TIME SERIES</p>
-<p>Use of R in examining, estimating, diagnostic checking, and forecasting of stationary/ non-stationary models including seasonal time series and ARMA models.</p></li>
-<li><p>PSTAT 126 REGRESSION ANALYSIS</p>
-<p>Use of R in Linear and multiple regression, including analysis of residuals, transformations, and variable/model selection</p></li>
-</ul>
-</div>
-<div id="srjc" class="section level3">
-<h3>SRJC</h3>
-<ul>
-<li><p>CS 61.11A/B MS EXCEL</p>
-<p>Creating, editing, formatting Excel worksheets, workbooks, charts , web pages, using functions and formulas, macros and PivotTables/PivotCharts.</p></li>
-</ul>
-</div>
+<div class="figure" style="text-align: center">
+<img src="img/resumescreenshot.png" alt="  " width="90%" height="90%" />
+<p class="caption">
+</p>
 </div>
 
 
