--- a/geog176A.html
+++ b/geog176A.html
@@ -403,9 +403,9 @@ $(document).ready(function () {
 <li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</li>
 </ul>
 <hr />
-</div>
-<div id="building-a-project-website" class="section level2">
-<h2><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
+<blockquote>
+<h2 id="building-a-project-website"><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
+</blockquote>
 <ul>
 <li>In this assignment we built a user site with GitHub</li>
 <li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
