--- a/index.html
+++ b/index.html
@@ -331,14 +331,25 @@ $(document).ready(function () {
 </div>
 
 
-<p><br></p>
-<p>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>. <br></p>
+<p>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</p>
+<hr />
+<p>Last summer, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science). I worked on assignments that included:</p>
+<ul>
+<li><p>working with raw data to create updating tables and plots that breakdown Covid Case Data</p></li>
+<li><p>extracting US census data to analyzing the impacted populations at the US border zone</p></li>
+<li><p>completing a dam analysis to examine dam patterns in the US</p></li>
+<li><p>implementing remote sensing based flood analysis</p></li>
+<li><p>constructing a partial FIM library</p></li>
+</ul>
+<p>More info can be found <a href="https://catherinerauch.github.io/geog176A.html">here</a>.</p>
+<p>I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects. Currently, I am using these newly learned skills to examine Oregon Wildfire Data.</p>
+<hr />
+<p>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. <br></p>
 <div class="figure" style="text-align: left">
 <img src="img/OsakaCastle.jpg" alt="   " width="49%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="49%" height="20%" />
 <p class="caption">
 </p>
 </div>
-<p>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. <br></p>
 <p>I enjoy tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
 
 
