--- a/geog176A.html
+++ b/geog176A.html
@@ -336,25 +336,26 @@ $(document).ready(function () {
 <p>Here is the collection of links for completed assignments:</p>
 <blockquote>
 <h2 id="creating-a-fim-with-flood-data-from-mission-creek"><a href="https://catherinerauch.github.io/geog-176A-labs/lab-06.html">Creating a FIM with Flood Data from Mission Creek</a></h2>
-</blockquote>
 <div class="figure" style="text-align: left">
 <img src="img/lab06plot.png" alt="  " width="40%" height="30%" />
 <p class="caption">
 </p>
 </div>
+</blockquote>
 <ul>
 <li><p>In this lab we estimated the number of buildings impacted in the 2017 Santa Barbara flood</p></li>
-<li><p>Data was load into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment.</p></li>
+<li><p>This terrain data was prepped for analysis by aligning object and field data</p></li>
+<li><p>Data was loaded into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment.</p></li>
 </ul>
 <hr />
 <blockquote>
 <h2 id="examination-and-visualization-of-2016-palo-iowa-flood-data"><a href="https://catherinerauch.github.io/geog-176A-labs/lab-05.html">Examination and Visualization of 2016 Palo, Iowa Flood Data</a></h2>
-</blockquote>
 <div class="figure" style="text-align: left">
 <img src="img/lab5plot.png" alt="  " width="40%" height="30%" />
 <p class="caption">
 </p>
 </div>
+</blockquote>
 <ul>
 <li><p>In this lab we created multiband raster files to detect/analyze a flood event</p></li>
 <li><p>Raster manipulation was used to threshold and classify data to be analysed</p></li>
@@ -363,12 +364,12 @@ $(document).ready(function () {
 <hr />
 <blockquote>
 <h2 id="impact-of-the-maup-on-national-dam-inventory-data"><a href="https://catherinerauch.github.io/geog-176A-labs/lab-04.html">Impact of the MAUP on National Dam Inventory data</a></h2>
-</blockquote>
 <div class="figure" style="text-align: left">
 <img src="img/lab4plot.png" alt="   " width="50%" height="40%" />
 <p class="caption">
 </p>
 </div>
+</blockquote>
 <ul>
 <li>In this lab we examined the impacts of different tessellated surfaces and the modifiable areal unit problem (MAUP)</li>
 <li>Point-in-polygon counts were calculated to aggregate point data and visualize the distribution of dams over the US</li>
@@ -377,12 +378,12 @@ $(document).ready(function () {
 <hr />
 <blockquote>
 <h2 id="exploration-of-us-city-data"><a href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration of US city data</a></h2>
-</blockquote>
 <div class="figure" style="text-align: left">
 <img src="img/CopyOfUSthememap.jpg" alt="   " width="50%" height="40%" />
 <p class="caption">
 </p>
 </div>
+</blockquote>
 <ul>
 <li>In this lab we explored working with sf, sfc, and sfg features &amp; objects</li>
 <li>Coordinate transformations and calculations were made to visualize distances between cities and borders</li>
@@ -391,12 +392,12 @@ $(document).ready(function () {
 <hr />
 <blockquote>
 <h2 id="analysis-of-covid-19-data"><a href="https://catherinerauch.github.io/geog-176A-labs/lab-02.html">Analysis of COVID-19 data</a></h2>
-</blockquote>
 <div class="figure" style="text-align: left">
 <img src="img/CopyOfcovidplot.jpg" alt="  " width="40%" height="30%" />
 <p class="caption">
 </p>
 </div>
+</blockquote>
 <ul>
 <li>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</li>
 <li>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</li>
