--- a/geog176A.html
+++ b/geog176A.html
@@ -331,9 +331,7 @@ $(document).ready(function () {
 </div>
 
 
-<div id="in-summer-2020-i-took-an-r-based-gis-course-geography-176a---intro-to-geographic-information-systems-and-science." class="section level5">
-<h5>In summer 2020, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</h5>
-<p>Here is the collection of links for completed assignments:</p>
+<hr />
 <blockquote>
 <h2 id="creating-a-fim-with-flood-data-from-mission-creek"><a href="https://catherinerauch.github.io/geog-176A-labs/lab-06.html">Creating a FIM with Flood Data from Mission Creek</a></h2>
 <div class="figure" style="text-align: left">
@@ -345,7 +343,7 @@ $(document).ready(function () {
 <ul>
 <li><p>In this lab we estimated the number of buildings impacted in the 2017 Santa Barbara flood</p></li>
 <li><p>This terrain data was prepped for analysis by aligning object and field data</p></li>
-<li><p>Data was loaded into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment.</p></li>
+<li><p>Data was loaded into R using Web APIs and the whitebox frontend was used to create a partial Flood Inudation Map (FIM) with structural damage assessment</p></li>
 </ul>
 <hr />
 <blockquote>
@@ -371,9 +369,9 @@ $(document).ready(function () {
 </div>
 </blockquote>
 <ul>
-<li>In this lab we examined the impacts of different tessellated surfaces and the modifiable areal unit problem (MAUP)</li>
-<li>Point-in-polygon counts were calculated to aggregate point data and visualize the distribution of dams over the US</li>
-<li>Functions were written to more efficiently report and map information</li>
+<li><p>In this lab we examined the impacts of different tessellated surfaces and the modifiable areal unit problem (MAUP)</p></li>
+<li><p>Point-in-polygon counts were calculated to aggregate point data and visualize the distribution of dams over the US</p></li>
+<li><p>Functions were written to more efficiently report and map information</p></li>
 </ul>
 <hr />
 <blockquote>
@@ -385,9 +383,9 @@ $(document).ready(function () {
 </div>
 </blockquote>
 <ul>
-<li>In this lab we explored working with sf, sfc, and sfg features &amp; objects</li>
-<li>Coordinate transformations and calculations were made to visualize distances between cities and borders</li>
-<li>Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting</li>
+<li><p>In this lab we explored working with sf, sfc, and sfg features &amp; objects</p></li>
+<li><p>Coordinate transformations and calculations were made to visualize distances between cities and borders</p></li>
+<li><p>Ggplot, gghighlight, and ggrepel were used to create graphics that are clear and interesting</p></li>
 </ul>
 <hr />
 <blockquote>
@@ -399,20 +397,19 @@ $(document).ready(function () {
 </div>
 </blockquote>
 <ul>
-<li>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</li>
-<li>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</li>
-<li>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</li>
+<li><p>In this lab we practiced data wrangling and visualization with real-time COVID-19 data</p></li>
+<li><p>It includes an in-depth look at daily new case data as well as cumulative data at State and County levels</p></li>
+<li><p>Pipes and other tidyverse tools were used to manipulate data and present it as legible tables and plots</p></li>
 </ul>
 <hr />
 <blockquote>
 <h2 id="building-a-project-website"><a href="https://github.com/catherinerauch/catherinerauch.github.io">Building a project website</a></h2>
 </blockquote>
 <ul>
-<li>In this assignment we built a user site with GitHub</li>
-<li>It includes a default page (‘About Me’) and a projects page (repo with access to code)</li>
-<li>Use of themes and icons on a webpage was explored</li>
+<li><p>In this assignment we built a user site with GitHub</p></li>
+<li><p>It includes a default page (‘About Me’) and a projects page (repo with access to code)</p></li>
+<li><p>Use of themes and icons on a webpage was explored</p></li>
 </ul>
-</div>
 
 
 
