--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@ $(document).ready(function () {
 <li><p>constructing a partial FIM library</p></li>
 </ul>
 <p>More info can be found <a href="https://catherinerauch.github.io/geog176A.html">here</a>.</p>
-<p>I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects. Currently, I am using these newly learned skills to examine Oregon Wildfire Data.</p>
+<p>I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects.</p>
+<p>Currently, I am <a href="https://catherinerauch.github.io/geog176A.html">working</a> on a spatial regression analysis of Killer Whale Location Patterns.</p>
 <hr />
 <p>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. I enjoy tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
 <br>
