--- a/index.html
+++ b/index.html
@@ -332,9 +332,11 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science at the University of California at Santa Barbara (UCSB). I am currently exploring a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</p>
+<div id="im-in-my-last-year-pursuing-a-bachelors-degree-in-statistics-and-data-science-and-a-minor-in-spatial-studies-at-the-university-of-california-at-santa-barbara-ucsb." class="section level5">
+<h5>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a> at the University of California at Santa Barbara (UCSB).</h5>
 <hr />
-<p>Last summer, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science). Assignments included:</p>
+<p>Last summer, I took an R based GIS course (Geography 176A - Intro to Geographic Information Systems and Science).</p>
+<p>Assignments included:</p>
 <ul>
 <li><p>working with raw data to create updating tables and plots that breakdown Covid-19 case data</p></li>
 <li><p>extracting US census data to analyze the impacted populations at the US border zone</p></li>
@@ -342,16 +344,22 @@ $(document).ready(function () {
 <li><p>implementing remote sensing based flood analysis</p></li>
 <li><p>constructing a partial FIM library</p></li>
 </ul>
-<p>More info can be found <a href="https://catherinerauch.github.io/geog176A.html#past-work">here</a>.</p>
+<p>More info can be found <a href="https://catherinerauch.github.io/geog176A.html#previous-work">here</a>.</p>
 <p>I am looking forward to using the skills learned in this class, including collecting and cleaning raw data, vector/raster data manipulation, creating/joining spatial data and objects, and geographical focused visualizations and tables, to create more spatial projects.</p>
-<p><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on a spatial regression analysis of Killer Whale Location Patterns.</p>
 <hr />
-<p>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. I enjoy tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</p>
-<br>
+</div>
+<div id="currently-i-am-working-on-an-analysis-of-killer-whale-sighting-patterns." class="section level5">
+<h5><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on an analysis of Killer Whale Sighting Patterns.</h5>
+</div>
+<div id="in-my-free-time-i-travel-and-like-to-take-photos.-born-and-raised-in-northern-california-im-a-big-sports-fan-and-religiously-follow-the-san-jose-sharks.-but-i-can-also-be-spotted-at-warriors-and-giants-games.-i-enjoy-tailoring-my-projects-to-my-interests-take-a-look" class="section level5">
+<h5>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games. I enjoy tailoring my projects to my interests, take a <a href="https://catherinerauch.github.io/projects.html">look</a>!</h5>
+<blockquote>
 <div class="figure" style="text-align: center">
 <img src="img/OsakaCastle.jpg" alt="   " width="50%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="50%" height="20%" />
 <p class="caption">
 </p>
+</div>
+</blockquote>
 </div>
 
 
