--- a/index.html
+++ b/index.html
@@ -332,16 +332,16 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<div id="im-in-my-last-year-pursuing-a-bachelors-degree-in-statistics-and-data-science-and-a-minor-in-spatial-studies-at-the-university-of-california-at-santa-barbara-ucsb." class="section level5">
-<h5>I’m in my last year pursuing a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a> at the University of California at Santa Barbara (UCSB).</h5>
-</div>
-<div id="currently-i-am-working-on-an-analysis-of-killer-whale-sighting-patterns." class="section level5">
-<h5><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on an analysis of Killer Whale Sighting Patterns.</h5>
+<div id="im-a-recent-grad-of-the-university-of-california-at-santa-barbara-ucsb-with-a-bachelors-degree-in-statistics-and-data-science-and-a-minor-in-spatial-studies." class="section level5">
+<h5>I’m a recent grad of the University of California at Santa Barbara (UCSB) with a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</h5>
 </div>
 <div id="previous-work-in-spatial-projects-and-other-areas-can-be-found-here" class="section level5">
 <h5>Previous work in <a href="https://catherinerauch.github.io/geog176A.html#previous-work">spatial</a> projects and other areas can be found <a href="https://catherinerauch.github.io/projects.html">here</a></h5>
+</div>
+<div id="currently-i-am-working-on-an-analysis-of-killer-whale-sighting-patterns." class="section level5">
+<h5><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on an analysis of Killer Whale Sighting Patterns.</h5>
 <hr />
-<p>In my free time I travel and like to take <a href="https://vsco.co/catttrauc/gallery">photos</a>.</p>
+<p>In my free time I explore the world and like to take <a href="https://vsco.co/kitcatzz/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. I can also be seen out and about on my bike or pushing the limits on the track. And I’m always looking to tailor my projects to my interests.</p>
 <blockquote>
 <div class="figure" style="text-align: center">
 <img src="img/OsakaCastle.jpg" alt="   " width="50%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="50%" height="20%" />
@@ -349,7 +349,6 @@ $(document).ready(function () {
 </p>
 </div>
 </blockquote>
-<p>Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. But, I can also be spotted at Warriors and Giants games.</p>
 </div>
 
 
