--- a/projects.html
+++ b/projects.html
@@ -333,32 +333,41 @@ $(document).ready(function () {
 
 <hr />
 <blockquote>
+<center>
 <h2 id="time-series-analysis-and-forecast-of-southern-resident-killer-whale-sightings">Time Series Analysis and Forecast of Southern Resident Killer Whale Sightings</h2>
+<a href="docs/RauchKillerWhaleProject.htm">Report</a>
 <div class="figure" style="text-align: left">
 <img src="img/killerwhales3.jpg" alt="   " width="45%" height="20%" /><img src="img/whaleforecast.png" alt="   " width="45%" height="20%" />
 <p class="caption">
 </p>
 </div>
+</center>
 </blockquote>
 <p>The goal of this report was to compile sighting data of the SRKW’s in the Salish Sea, and to forecast future sightings. Raw data was compiled from <a href="https://hotline.whalemuseum.org/">the Whale Museums’ Hotline</a>. A total of 16,722 southern resident observations were grouped by month from year 2008 to 2015. After appropriate transformation and differencing was applied, multiple SARIMA models were fit and diagnostics preformed to choose the best. This model was then used to forecast the next 6 months of sightings.</p>
 <hr />
 <blockquote>
+<center>
 <h2 id="exploratory-analysis-of-shark-tank-data">Exploratory Analysis of Shark Tank Data</h2>
+<a href="docs/RauchSharkTankReport.html">Report</a>
 <div class="figure" style="text-align: left">
 <img src="img/visualization%20(12).png" alt="   " width="49%" height="100%" /><img src="img/visualization%20(10).png" alt="   " width="49%" height="100%" />
 <p class="caption">
 </p>
 </div>
+</center>
 </blockquote>
 <p>This report uses 10 seasons of “Shark Tank” to examine the breakdown of pitches, how these changed over time,and how the famous millionaire Sharks spend their money. Data manipulation such as grouping and aggregating was done with Pandas and Numpy while visuals and regression was done with Altair.</p>
 <hr />
 <blockquote>
+<center>
 <h2 id="regression-analysis-of-sleep-in-mammalian-species">Regression Analysis of Sleep in Mammalian Species</h2>
-<div class="figure" style="text-align: left">
-<img src="img/mammaplot.png" alt="   " width="75%" height="75%" />
+<a href="docs/RauchMammalProjectReport.html">Report</a>
+<div class="figure" style="text-align: center">
+<img src="img/mammaplot.png" alt=" " width="75%" height="75%" />
 <p class="caption">
 </p>
 </div>
+</center>
 </blockquote>
 <p>This project investigates the link between brain/body weight, life span, gestation time, time spent sleeping/dreaming, and predation/danger indices for 62 species of mammals. The raw data was cleaned and relationships were explored in a scatterplot matrix. While attempting to determine which variables were significant in predicting time spent dreaming, high influence and leverage points were found and multiple models were fit before selecting the best with AIC. To predict total time spent dreaming step-wise regression was preformed.</p>
 
