--- a/index.html
+++ b/index.html
@@ -332,8 +332,8 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<div id="im-a-recent-grad-of-the-university-of-california-at-santa-barbara-ucsb-with-a-bachelors-degree-in-statistics-and-data-science-and-a-minor-in-spatial-studies." class="section level5">
-<h5>I’m a recent grad of the University of California at Santa Barbara (UCSB) with a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</h5>
+<div id="im-a-recent-graduate-of-the-university-of-california-at-santa-barbara-ucsb-with-a-bachelors-degree-in-statistics-and-data-science-and-a-minor-in-spatial-studies." class="section level5">
+<h5>I’m a recent graduate of the University of California at Santa Barbara (UCSB) with a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</h5>
 </div>
 <div id="previous-work-in-spatial-projects-and-other-areas-can-be-found-here" class="section level5">
 <h5>Previous work in <a href="https://catherinerauch.github.io/geog176A.html#previous-work">spatial</a> projects and other areas can be found <a href="https://catherinerauch.github.io/projects.html">here</a></h5>
