--- a/projects.html
+++ b/projects.html
@@ -336,7 +336,7 @@ $(document).ready(function () {
 <center>
 <h2 id="time-series-analysis-and-forecast-of-southern-resident-killer-whale-sightings">Time Series Analysis and Forecast of Southern Resident Killer Whale Sightings</h2>
 <a href="docs/RauchKillerWhaleProject.htm">Report</a>
-<div class="figure" style="text-align: left">
+<div class="figure" style="text-align: center">
 <img src="img/killerwhales3.jpg" alt="   " width="45%" height="20%" /><img src="img/whaleforecast.png" alt="   " width="45%" height="20%" />
 <p class="caption">
 </p>
@@ -349,7 +349,7 @@ $(document).ready(function () {
 <center>
 <h2 id="exploratory-analysis-of-shark-tank-data">Exploratory Analysis of Shark Tank Data</h2>
 <a href="docs/RauchSharkTankReport.html">Report</a>
-<div class="figure" style="text-align: left">
+<div class="figure" style="text-align: center">
 <img src="img/visualization%20(12).png" alt="   " width="49%" height="100%" /><img src="img/visualization%20(10).png" alt="   " width="49%" height="100%" />
 <p class="caption">
 </p>
