more minor fixes

--- a/projects.html
+++ b/projects.html
@@ -335,7 +335,7 @@ $(document).ready(function () {
 <blockquote>
 <center>
 <h2 id="time-series-analysis-and-forecast-of-southern-resident-killer-whale-sightings">Time Series Analysis and Forecast of Southern Resident Killer Whale Sightings</h2>
-<a href="docs/RauchKillerWhaleProject.htm">Report</a>
+<a href="docs/Catherine%20Rauch%20-%20174%20final%20project.html">Report</a>
 <div class="figure" style="text-align: center">
 <img src="img/killerwhales3.jpg" alt="   " width="45%" height="20%" /><img src="img/whaleforecast.png" alt="   " width="45%" height="20%" />
 <p class="caption">
@@ -361,7 +361,7 @@ $(document).ready(function () {
 <blockquote>
 <center>
 <h2 id="regression-analysis-of-sleep-in-mammalian-species">Regression Analysis of Sleep in Mammalian Species</h2>
-<a href="docs/RauchMammalProjectReport.html">Report</a>
+<a href="docs/Rauch%20126%20Project.html">Report</a>
 <div class="figure" style="text-align: center">
 <img src="img/mammaplot.png" alt=" " width="75%" height="75%" />
 <p class="caption">
