--- a/index.html
+++ b/index.html
@@ -332,16 +332,11 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<div id="im-a-recent-graduate-of-the-university-of-california-at-santa-barbara-ucsb-with-a-bachelors-degree-in-statistics-and-data-science-and-a-minor-in-spatial-studies." class="section level5">
-<h5>I’m a recent graduate of the University of California at Santa Barbara (UCSB) with a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</h5>
-</div>
-<div id="previous-work-in-spatial-projects-and-other-areas-can-be-found-here" class="section level5">
-<h5>Previous work in <a href="https://catherinerauch.github.io/geog176A.html#previous-work">spatial</a> projects and other areas can be found <a href="https://catherinerauch.github.io/projects.html">here</a></h5>
-</div>
-<div id="currently-i-am-working-on-an-analysis-of-killer-whale-sighting-patterns." class="section level5">
-<h5><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on an analysis of Killer Whale Sighting Patterns.</h5>
+<p>I’m a recent graduate of the University of California at Santa Barbara (UCSB) with a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</p>
+<p>Previous work in <a href="https://catherinerauch.github.io/geog176A.html#previous-work">spatial</a> projects and other areas can be found <a href="https://catherinerauch.github.io/projects.html">here</a></p>
+<p><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on an analysis of Killer Whale Sighting Patterns.</p>
 <hr />
-<p>In my free time I explore the world and like to take <a href="https://vsco.co/kitcatzz/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. I can also be seen out and about on my bike or pushing the limits on the track. And I’m always looking to tailor my projects to my interests.</p>
+<p>In my free time I travel and like to take <a href="https://vsco.co/kitcatzz/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. I can also be seen out and about on my bike or pushing the limits on the track. And I’m always looking to tailor my projects to my interests.</p>
 <blockquote>
 <div class="figure" style="text-align: center">
 <img src="img/OsakaCastle.jpg" alt="   " width="50%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="50%" height="20%" />
@@ -349,7 +344,6 @@ $(document).ready(function () {
 </p>
 </div>
 </blockquote>
-</div>
 
 
 
