--- a/index.html
+++ b/index.html
@@ -333,17 +333,16 @@ $(document).ready(function () {
 
 <p><br></p>
 <p>I’m a recent graduate of the University of California at Santa Barbara (UCSB) with a Bachelor’s Degree in Statistics and Data Science and a minor in <a href="http://spatial.ucsb.edu/academic-minor/">Spatial Studies</a>.</p>
-<p>Previous work in <a href="https://catherinerauch.github.io/geog176A.html#previous-work">spatial</a> projects and other areas can be found <a href="https://catherinerauch.github.io/projects.html">here</a></p>
-<p><a href="https://catherinerauch.github.io/geog176A.html#current-work">Currently</a>, I am working on an analysis of Killer Whale Sighting Patterns.</p>
+<p>Previous work in <a href="https://catherinerauch.github.io/geog176A.html#previous-work">spatial</a> projects and other areas can be found <a href="https://catherinerauch.github.io/projects.html">here</a>. Currently, I am working on an <a href="https://catherinerauch.github.io/geog176A.html#current-work">analysis</a> of Killer Whale Sighting Patterns.</p>
 <hr />
-<p>In my free time I travel and like to take <a href="https://vsco.co/kitcatzz/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and religiously follow the San Jose Sharks. I can also be seen out and about on my bike or pushing the limits on the track. And I’m always looking to tailor my projects to my interests.</p>
 <blockquote>
 <div class="figure" style="text-align: center">
-<img src="img/OsakaCastle.jpg" alt="   " width="50%" height="20%" /><img src="img/JapaneseMaple.jpg" alt="   " width="50%" height="20%" />
+<img src="img/2021-03-25%2021_16_26.734-0700_2%20(1).jpg" alt="   " width="50%" height="20%" /><img src="img/2021-07-29-042631646_2%20(2).jpg" alt="   " width="50%" height="20%" />
 <p class="caption">
 </p>
 </div>
 </blockquote>
+<p>In my free time I travel and like to take <a href="https://vsco.co/kitcatzz/gallery">photos</a>. Born and raised in Northern California, I’m a big sports fan and sacredly follow the San Jose Sharks. I can also be seen out and about on my bike or pushing the limits on the track.</p>
 
 
 
