--- a/geog176A.html
+++ b/geog176A.html
@@ -252,6 +252,13 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
+  <a href="geog176A.html">
+    <span class="fa fa-grav"></span>
+     
+    GIS
+  </a>
+</li>
+<li>
   <a href="catherinerauch.html">
     <span class="fa fa-info"></span>
      
