--- a/geog176A.html
+++ b/geog176A.html
@@ -361,7 +361,7 @@ information</p></li>
 href="https://catherinerauch.github.io/geog-176A-labs/lab-03.html">Exploration
 of US city data</a></h2>
 <div class="figure" style="text-align: left">
-<img src="img/CopyofUSthememap.jpg" alt="   " width="50%" height="40%" />
+<img src="img/CopyOfUSthememap.jpg" alt="   " width="50%" height="40%" />
 <p class="caption">
 </p>
 </div>
@@ -380,7 +380,7 @@ that are clear and interesting</p></li>
 href="https://catherinerauch.github.io/geog-176A-labs/lab-02.html">Analysis
 of COVID-19 data</a></h2>
 <div class="figure" style="text-align: left">
-<img src="img/Copyofcovidplot.jpg" alt="  " width="40%" height="30%" />
+<img src="img/CopyOfcovidplot.jpg" alt="  " width="40%" height="30%" />
 <p class="caption">
 </p>
 </div>
