--- a/projects.html
+++ b/projects.html
@@ -252,10 +252,10 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="catherinerauch.html">
-    <span class="fa fa-info"></span>
+  <a href="geog176A.html">
+    <span class="fa fa-grav"></span>
      
-     CV
+    GIS
   </a>
 </li>
       </ul>
